--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -31,10 +31,27 @@
         <section>
             <h2>Welcome to TechCon 2024</h2>
             <p>
-                TechCon 2024 is where the future of technology meets innovation. Join us for an exciting lineup of speakers, workshops, and networking opportunities, all designed to shape the
+                TechCon 2024 is where the future of technology meets innovation. Join us for an exciting lineup of speakers, workshops, and networking opportunities, all designed to shape the future of technology and digital transformation. Whether you're a developer,
+                entrepreneur, or tech enthusiast, this event is for you!
             </p>
-        </section>
-    </main>
-</body>
 
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/JKI6P0VGEVI?si=Hr3KARbJpusmQX79" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <h3>Event Overview</h3>
+            <p>
+                Get a sneak peek at what to expect at TechCon 2024 by watching our official promotional video below:
+            </p>
+
+            <p>
+                <small>A sneak peek of TechCon 2024, highlighting key events, speakers,
+            and networking opportunities.</small
+          >
+        </p>
+      </section>
+    </main>
+
+    <footer>
+      <p>&copy; 2024 TechCon. All Rights Reserved.</p>
+    </footer>
+  </body>
 </html>
