--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -35,21 +35,25 @@
                 entrepreneur, or tech enthusiast, this event is for you!
             </p>
 
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/JKI6P0VGEVI?si=Hr3KARbJpusmQX79" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <h3>Event Overview</h3>
             <p>
                 Get a sneak peek at what to expect at TechCon 2024 by watching our official promotional video below:
             </p>
-
+            <video controls>
+          <source
+          src=""https://www.youtube.com/embed/JKI6P0VGEVI?si=Hr3KARbJpusmQX79"
+          title="YouTube video player" frameborder="0" allow="accelerometer;
+          autoplay; clipboard-write; encrypted-media; gyroscope;
+          picture-in-picture; web-share"" type="video/mp4" /> Your browser does
+          not support the video tag.
+        </video>
             <p>
-                <small>A sneak peek of TechCon 2024, highlighting key events, speakers,
-            and networking opportunities.</small
+                <small>Video description: A sneak peek of TechCon 2024, highlighting key
+            events, speakers, and networking opportunities.</small
           >
         </p>
       </section>
     </main>
-
     <footer>
       <p>&copy; 2024 TechCon. All Rights Reserved.</p>
     </footer>
