--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -2,16 +2,15 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>About TechCon 2024</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <!-- Include your styles -->
 </head>
 
 <body>
-
     <header>
         <h1>About TechCon 2024</h1>
         <nav>
@@ -27,12 +26,58 @@
     <main>
         <article id="history">
             <h2>History of TechCon</h2>
-            <p>TechCon started in 2010 as a small gathering of tech enthusiasts and has since grown into one of the largest conferences in the technology industry. Each year, innovators, developers, and entrepreneurs come together to share their knowledge,
-                network, and showcase the latest advancements in tech.</p>
+            <p>
+                TechCon started in 2010 as a small gathering of tech enthusiasts and has since grown into one of the largest conferences in the technology industry. Each year, innovators, developers, and entrepreneurs come together to share their knowledge, network,
+                and showcase the latest advancements in tech.
+            </p>
             <img src="techcon-history.jpg" alt="Early days of TechCon conference" />
         </article>
 
         <article id="mission">
             <h2>Our Mission</h2>
-            <p>The mission of TechCon is to foster innovation, creativity, and collaboration within the technology community. We aim to provide a platform for experts to share their knowledge and inspire the next generation of tech leaders.</p>
-            <img src="techcon-mission.jpg" alt="TechCon mission - fostering inno
+            <p>
+                The mission of TechCon is to foster innovation, creativity, and collaboration within the technology community. We aim to provide a platform for experts to share their knowledge and inspire the next generation of tech leaders.
+            </p>
+            <img src="techcon-mission.jpg" alt="TechCon mission - fostering innovation" />
+        </article>
+
+        <!-- Wrapping Past Speakers section in an article tag -->
+        <article id="past-speakers">
+            <h2>Notable Past Speakers</h2>
+            <p>
+                TechCon has been honored to host some of the most influential figures in the tech world. Here are just a few of our distinguished speakers:
+            </p>
+
+            <section class="speaker">
+                <h3>Jane Doe - CEO, TechInnovate</h3>
+                <img src="jane-doe.jpg" alt="Jane Doe - CEO of TechInnovate" />
+                <p>
+                    Jane Doe has revolutionized the tech industry with her visionary approach to AI and machine learning. As the CEO of TechInnovate, she continues to push the boundaries of what is possible in the tech space.
+                </p>
+            </section>
+
+            <section class="speaker">
+                <h3>John Smith - Founder, CodeX</h3>
+                <img src="john-smith.jpg" alt="John Smith - Founder of CodeX" />
+                <p>
+                    John Smith is the founder of CodeX, a platform that has transformed the way developers learn and collaborate globally. His insights into the future of programming languages have been invaluable.
+                </p>
+            </section>
+
+            <section class="speaker">
+                <h3>Emily Johnson - CTO, NextGen Solutions</h3>
+                <img src="emily-johnson.jpg" alt="Emily Johnson - CTO of NextGen Solutions" />
+                <p>
+                    Emily Johnson's work in cloud computing and cybersecurity has earned her recognition as one of the most influential CTOs in the world. She has been at the forefront of securing the next generation of digital technologies.
+                </p>
+            </section>
+        </article>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 TechCon. All rights reserved.</p>
+        <p>Contact us: info@techcon.com</p>
+    </footer>
+</body>
+
+</html>
