--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -21,14 +21,13 @@
             </ul>
         </nav>
     </header>
-
     <main>
         <section>
             <h2>Detailed Schedule of Events for TechCon 2024</h2>
 
             <table>
                 <caption>
-                    Detailed Schedule of Events for TechCon 2024
+                    Detailed Schedule of Events for TechCon 2024.
                 </caption>
                 <thead>
                     <tr>
@@ -58,6 +57,10 @@
             </table>
         </section>
     </main>
+    <footer>
+        <p>&copy; 2024 TechCon. All rights reserved.</p>
+        <p>Contact us: info@techcon.com</p>
+    </footer>
 </body>
 
 </html>
