--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -27,7 +27,7 @@
 
             <table>
                 <caption>
-                    Detailed Schedule of Events for TechCon 2024.
+                    Detailed Schedule of Events for TechCon 2024
                 </caption>
                 <thead>
                     <tr>
@@ -57,6 +57,7 @@
             </table>
         </section>
     </main>
+
     <footer>
         <p>&copy; 2024 TechCon. All rights reserved.</p>
         <p>Contact us: info@techcon.com</p>
