--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -58,10 +58,11 @@
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2024 TechCon. All rights reserved.</p>
-        <p>Contact us: info@techcon.com</p>
-    </footer>
+ <footer>
+    <p>Copyright © 2024 TechCon. All rights reserved.</p>
+    <p>Contact us: info@techcon.com</p>
+</footer>
+
 </body>
 
 </html>
