--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -26,17 +26,16 @@
             <h2>Detailed Schedule of Events for TechCon 2024</h2>
 
             <table>
-                <caption>
-                    Detailed Schedule of Events for TechCon 2024
-                </caption>
-                <thead>
+<caption>
+    Detailed Schedule of Events for TechCon 2024
+</caption>         <thead>
                     <tr>
                         <th scope="col">Time</th>
                         <th scope="col">Session</th>
                         <th scope="col">Speaker</th>
                     </tr>
-                </thead>
-                <tbody>
+                  </thead>
+                  <tbody>
                     <tr>
                         <td>9:00 AM - 10:00 AM</td>
                         <td>Opening Keynote: The Future of AI</td>
