--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo">
-            <h1>TechCon 2024</h1>
+            <h1>Register for TechCon 2024</h1>
         </div>
         <nav>
             <ul>
